@@ -75,6 +75,7 @@ o always close stdin - even in non-daemon mode, it is of no use
 o chdir("/") to release the cwd inode
 o ignore setsid() failure, because there is only one possible and
 o fix harmless error condition
+o add buffer_destroy() to buffer.c
 
 version 0.9.5 (2007/07/29)
 ------------------------------
